<resources>
    <string name="app_name">Smart News</string>
    <string name="todo">Todo</string>
    <string name="smartnews_ac_ke">smartnews.ac.ke</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="smart_news">smart_news</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Settings">Settings</string>
    <string name="Break_News">Break News</string>
    <string name="images" />
    <string name="text">A significant proportion of healthcare in Myanmar is now being delivered outside state hospitals, by doctors and nurses who oppose the military and are loyal to the National Unity Government challenging the junta\'s legitimacy, medical workers in the country told the BBC.</string>
</resources>